# Leetcode_Patterns_Aggregator

./: .gitignore  main.py  pyproject.toml
aggregator/: aggregator.py  gemini.py
sheet/: sheet_populator.py
